# acesecurity-py

./: .gitignore  TODO  pyproject.toml
src/acecurity/: __init__.py  main.py  passwords.py
src/acecurity/crypto/: __init__.py  _definitions.py
src/acecurity/crypto/_crypto/: __init__.py  _keys.py
src/acecurity/crypto/_pycryptox/: __init__.py  _keys.py  _others.py
src/acecurity/crypto/algos/_sym/: __init__.py
src/acecurity/tests/: test_crypto_pycryptodomex.py  test_passwords.py  test_rand.py
src/acesecurity/: __init__.py  _direct.py  main.py  passwords.py  rand.py
src/acesecurity/crypto/: __init__.py  _std_lib.py  aead.py
src/acesecurity/crypto/_crypto/: _others.py
src/acesecurity/crypto/_pycryptox/: _keys.py
src/acesecurity/crypto/_quantcrypt/: __init__.py
src/acesecurity/tests/: test_crypto_cryptography.py
