[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  "acecurity",
  "acecurity.tests",
]
include-package-data = true
package-dir = {"" = "src"}

[tool.ruff]
line-length = 88  # For PEP8 compliance
exclude = [
    "src/acecurity/tests/*",
    "scripts/*",
]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501", "F401", "F403"]  # E501 Line length checks for now; F401 & F403 because they are used for type checking
exclude = [
    "src/acecurity/tests/*",
    "scripts/*",
]

[project]
name = "acesecurity"
version = "2.0.0.7"
dependencies = ["typing_extensions"]
requires-python = ">= 3.10"
authors = [
  {name = "Cariel Becker", email = "cariel.becker@gmx.de"},
]
maintainers = [
  {name = "Cariel Becker", email = "cariel.becker@gmx.de"},
]
description = "."
readme = {file = "README.md", content-type = "text/markdown"}
license = "LGPL-2.1-or-later"
keywords = [""]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Programming Language :: Python",
	"Natural Language :: English"
]

[project.optional-dependencies]
cli = ["argumint>=2.0.0"]
dev = ["pytest", "coverage", "pre-commit", "ruff", "pdoc>=14.0"]

[project.urls]
Home = "https://pypi.org/project/acecurity/"
Repository = "https://github.com/adalfarus/acecurity"
Documentation = "https://github.com/adalfarus/acecurity/wiki"
"Issue tracker" = "https://github.com/adalfarus/acecurity/issues"

#[tool.pytest.ini_options]
## This is equivalent to setup_requires and tests_require
## Add your pytest configuration here
#addopts = "your pytest options"

[project.scripts]
lockert = "acecurity._cli:_cli"
